--- a/html/playing/stealing-techniques.html
+++ b/html/playing/stealing-techniques.html
@@ -24,21 +24,21 @@
         <div>
           <h2 class="page_heading">Stealing Techniques</h2>
           <ul id="quick_links" class="quick_links">
-            <li><a href="thief_mode">Thief Mode</a></li>
-            <li><a href="before_stealing">Before Stealing</a></li>
-            <li><a href="steal_from_a_shop">Steal from a Shop</a></li>
-            <li><a href="steal_from_a_trader">Steal from a Trader</a></li>
-            <li><a href="things_that_can_be_used_to_steal">Things that can be used to steal</a>
+            <li><a href="#thief_mode">Thief Mode</a></li>
+            <li><a href="#before_stealing">Before Stealing</a></li>
+            <li><a href="#steal_from_a_shop">Steal from a Shop</a></li>
+            <li><a href="#steal_from_a_trader">Steal from a Trader</a></li>
+            <li><a href="#things_that_can_be_used_to_steal">Things that can be used to steal</a>
               <ul>
-                <li><a href="weapons">Weapons</a></li>
-                <li><a href="bracelets">Bracelets</a></li>
-                <li><a href="scrolls">Scrolls</a></li>
-                <li><a href="staves">Staves</a></li>
-                <li><a href="pots">Pots</a></li>
-                <li><a href="grass_and_seeds">Grass・Seeds</a></li>
-                <li><a href="traps">Traps</a></li>
-                <li><a href="statues">Statues</a></li>
-                <li><a href="monsters">Monsters</a></li>
+                <li><a href="#weapons">Weapons</a></li>
+                <li><a href="#bracelets">Bracelets</a></li>
+                <li><a href="#scrolls">Scrolls</a></li>
+                <li><a href="#staves">Staves</a></li>
+                <li><a href="#pots">Pots</a></li>
+                <li><a href="#grass_and_seeds">Grass・Seeds</a></li>
+                <li><a href="#traps">Traps</a></li>
+                <li><a href="#statues">Statues</a></li>
+                <li><a href="#monsters">Monsters</a></li>
               </ul>
             </li>
           </ul>
