working on the gameplay basics page

--- a/html/system/gameplay-basics.html
+++ b/html/system/gameplay-basics.html
@@ -278,7 +278,7 @@
           </ul>
           <h3 id="dungeon_mechanics">Dungeon Mechanics</h3>
           <h4 id="shops">Shops</h4>
-          <p>Occasionally generated in Random Dungeons.</p>
+          <p>Shops are occasionally generated in Random Dungeons.</p>
           <ul>
             <li>Shops can be generated in Shuten Trail Mid, Shuten Trail Hard, Onigashima, Halfway Well, and Road to the End.
               <ul>
@@ -292,44 +292,44 @@
                 <li>Be warned that items for sale might include a <a href="/shiren2/html/system/monsters.html#ndubba">N'dubba</a> disguised as an item.</li>
               </ul>
             </li>
-            <li>Traps can be generated inside a shop, including a Spring that may lead to accidentally triggering Thief Mode.</li>
-            <li></li>
-            <li>
+            <li>Traps can be generated inside shops, so be careful of Springs in particular.</li>
+            <li>There are either 1 or 2 entrances to a shop, and Shopkeepers always stands at the entrance.</li>
+            <li>Items cannot be placed on the ground where Shopkeepers stand, including the entrance.
               <ul>
-                <li></li>
+                <li>Droplet Ninja family monsters will never place traps on a shop's entrance tile when defeated.</li>
               </ul>
             </li>
-            <li></li>
-            <li>
+            <li>The individual items for sale vary, and are based on each dungeon's item table.</li>
+            <li>Two types of shops can be generated - regular shops, and specialty shops.
               <ul>
-                <li></li>
+                <li>Specialty shops only sell one category of item, such as only grass items, or only bracelets.</li>
               </ul>
             </li>
-            <li>
+            <li>Shopkeepers block the exit when Shiren picks up merchandise, and ask for Gitan when you talk to them.
               <ul>
-                <li></li>
+                <li>Pay the amount of Gitan they ask for, and the item will become yours.</li>
               </ul>
             </li>
-            <li>
+            <li>Exiting the shop without paying for the item will trigger Thief Mode.
               <ul>
-                <li></li>
+                <li>For details about stealing, check out the <a href="/shiren2/html/playing/stealing-techniques.html">Stealing Techniques</a> page.</li>
               </ul>
             </li>
-            <li>
+            <li>If you want to sell items, simply place them on the ground.
               <ul>
-                <li></li>
+                <li>Shopkeepers will ask if you want to sell the items you placed when you talk to them, so select [Yes] to sell the items.</li>
               </ul>
             </li>
-            <li>
+            <li>Shopkeepers will fight back if attacked by Shiren, but defeating a Shopkeeper will not trigger Thief Mode.
               <ul>
-                <li></li>
+                <li>They will also attack monsters that deal damage to them, and will level up when they defeat monsters.</li>
               </ul>
             </li>
-            <li>
+            <li>Merchandise can be refreshed by reading a Restock Scroll.
               <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>All merchandise on the ground vanishes, and new merchandise is generated in the center of the room.</li>
+                <li>Refreshing always generates 9 items (or fewer based on room size), no matter how many items were on the ground.</li>
+                <li>Merchandise in specialty shops will still only sell the same category of items.</li>
               </ul>
             </li>
           </ul>
