working on the gameplay basics page

--- a/html/system/gameplay-basics.html
+++ b/html/system/gameplay-basics.html
@@ -451,48 +451,65 @@
           <pre class="diagram">500,000<br>Floor = 10 in the score formula when Halfway Well is cleared.</pre>
           <h2 id="item_related">Item Related</h2>
           <h3 id="synthesis">Synthesis</h3>
+          <p>Synthesis is a mechanic that allows you to modify one item using another.</p>
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li>
+            <li>The item to be modified is called the base, and the secondary item to be consumed is called the ingredient.</li>
+            <li>In a broad sense, the base can also be considered an ingredient.</li>
+            <li>The first item inserted into a Synthesis Pot or thrown at a Mixer becomes the base,<br>and items thrown afterward are the ingredients.</li>
+            <li>Generally, the item used as a base will not be lost or transformed.
               <ul>
-                <li></li>
+                <li>However, items used as ingredients will be consumed and lost.</li>
               </ul>
             </li>
-            <li></li>
+            <li>Weapons, shields, and staves are the three item categories that can act as a base.
+              <ul>
+                <li>Ingredients must be the same category as the base item when using a Synthesis Pot.</li>
+              </ul>
+            </li>
           </ul>
           <dl>
             <dt>Staff Synthesis</dt>
-            <dd>Text</dd>
+            <dd>Only staves with identical names can be synthesized together.<br>Synthesizing staves will add the number of uses together, and will also identify the staff.</dd>
           </dl>
           <dl>
             <dt>Weapon, Shield Synthesis</dt>
             <dd></dd>
           </dl>
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li>
+            <li>Synthesize weapons with weapons, or shields with shields.</li>
+            <li>Upgrade value (ex: +1) and special abilities (seals) will be added/transferred to the base item.
               <ul>
-                <li></li>
+                <li>Seals are depicted as a single Japanese character.</li>
               </ul>
             </li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>The max upgrade value for all weapons and shields is +99.</li>
+            <li>Weapons and shields have a limited number of seal slots.
+              <ul>
+                <li>Unlike other games in the series, you cannot fit every seal in the game into one piece of equipment.</li>
+              </ul>
+            </li>
+            <li>Each piece of equipment comes with a set number of slots, but the number of slots can be increased.
+              <ul>
+                <li>The max number of slots is 16.</li>
+              </ul>
+            </li>
+            <li>Plating (金) and curse (呪) are counted as seals in Shiren 2.</li>
+            <li>Some two-handed weapons and shields can only be used as a base in synthesis.</li>
+            <li>Things that affect seals:<br>Synthesis Pot, Plating Scroll, Purify Scroll, Mixer family, Straw Voodoll family, Monsoon Doll,<br>Gyandora, the Blacksmith at Shuten Halfway, and the 帰 seal.</li>
+            <li>Things that affect seal slots:<br>Blank Scroll, Mixer family, Gyandora.</li>
           </ul>
           <dl>
             <dt>Mixer Synthesis</dt>
             <dd></dd>
           </dl>
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Synthesize using different category items as ingredients (ex: grasses, scrolls) when equipment is used as a base.</li>
+            <li>Different category items can only be synthesized by throwing items at a Mixer family monster.
+              <ul>
+                <li>To be clear, you cannot synthesize different category items together using a Synthesis Pot.</li>
+              </ul>
+            </li>
+            <li>List of ingredients and resulting seals:<br>Dragon Grass(火), Flame Grass(火), Otogiriso(弟), Herb(薬), Life Grass(命), Antidote Grass(消 - shield only),<br>Strength Grass(ち - weapon only), Happy Grass(幸), Angel Seed(天), Unlucky Seed(不, 呪), Disaster Seed(超, 呪),<br>Slumber Scroll(眠), Purify Scroll(祓), Identify Scroll(識), Retreat Scroll(帰), Blank Scroll(seal slot +1),<br>Riceball(飯), Large Riceball(飯), Giant Riceball(飯), Specialty Riceball(飯), Silver Arrow(銀), Dragon Tile Bracelet(中).</li>
           </ul>
           <dl>
             <dt>Seal Order</dt>
