working on the gameplay basics page

--- a/html/system/gameplay-basics.html
+++ b/html/system/gameplay-basics.html
@@ -513,7 +513,7 @@
           </ul>
           <dl>
             <dt>Seal Order</dt>
-            <dd>Text</dd>
+            <dd>Seals will be added in the same order as the ingredients.<br>If an ingredient has an innate special ability, that will be added before the other seals.</dd>
           </dl>
           <ul>
             <li></li>
