working on the gameplay basics page

--- a/html/system/gameplay-basics.html
+++ b/html/system/gameplay-basics.html
@@ -513,39 +513,39 @@
           </ul>
           <dl>
             <dt>Seal Order</dt>
-            <dd>Seals will be added in the same order as the ingredients.<br>If an ingredient has an innate special ability, that will be added before the other seals.</dd>
+            <dd>Seals will be added in the same order as the order of ingredients.<br>If an ingredient has an innate special ability, that ability will be added before the other seals.</dd>
           </dl>
           <ul>
-            <li></li>
-            <li>
+            <li>Example 1: Katana (三回○○○) followed by Drain Buster+2 (目○○○○) results in a Katana+2 (三回ド目○).</li>
+            <li>Example 2: Katana (三回○○○) followed by Drain Buster+2 (目竜月火○) results in a Katana+2 (三回ド目竜).
               <ul>
-                <li></li>
-                <li></li>
+                <li>The seals toward the end (月 and 火) are lost because the number of seals exceeds the number of slots.</li>
+                <li>So remember, seals are added starting from the left, and innate seals are added before other seals.</li>
               </ul>
             </li>
-            <li>
+            <li>Example 3: Katana+2 (三回ド目○) followed by Homing Blade-1 (呪○○) results in a Katana+1 (三回ド目必).
               <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Homing Blade's innate ability (必) was added first, so the curse (呪) didn't transfer.</li>
+                <li>Note that the + and - values were added together, resulting in -1 upgrade value.</li>
+                <li>Remember this in case you come across cursed equipment and want to transfer the innate ability but not the curse.</li>
               </ul>
             </li>
-            <li>
+            <li>Example 4: Katana+7 (三回ド目必) followed by Disposable Sword+3 (○○○) results in a Katana+10 (三回ド目必).
               <ul>
-                <li></li>
-                <li></li>
+                <li>Disposable Sword's innate ability (捨) was not transferred, because the Katana's slots were already filled.</li>
+                <li>So as long as the base equipment's slots are filled, you can add upgrade values without adding undesirable seals.</li>
               </ul>
             </li>
           </ul>
           <dl>
             <dt>Special Synthesis</dt>
-            <dd>Text</dd>
+            <dd>If you synthesize specific seals onto certain pieces of equipment, the item will be transformed into a new item.<br>Think of these as secret recipes to create powerful equipment.</dd>
           </dl>
           <ul>
-            <li></li>
-            <li></li>
+            <li>Weapons:<br>Kaburasutegi, Daisangen Sword, Fiery Fuuma, Healing Sword, Wonder Pickaxe, Ryujin Sword.</li>
+            <li>Shields:<br>Helix Shield, Daisangen Shield, Nirvana Shield.</li>
           </ul>
-          <p>　※</p>
+          <p>　※ Check the the item and seal pages for details regarding the items and seals mentioned in this section.<br>　　 Special synthesis recipes are also listed in the item pages.</p>
           <h3 id="durability">Durability</h3>
           <h4 id="weapon_durability">Weapon Durability</h4>
           <p>Text</p>
