working on the gameplay basics page

--- a/html/system/gameplay-basics.html
+++ b/html/system/gameplay-basics.html
@@ -548,40 +548,44 @@
           <p>　※ Check the the item and seal pages for details regarding the items and seals mentioned in this section.<br>　　 Special synthesis recipes are also listed in the item pages.</p>
           <h3 id="durability">Durability</h3>
           <h4 id="weapon_durability">Weapon Durability</h4>
-          <p>Text</p>
+          <p>All weapons have are assigned a random durability value of 15~60.<br>Digging using a <a href="/shiren2/html/item/weapons.html#pickaxe">Pickaxe</a>'s ability or destroying traps using a <a href="/shiren2/html/item/weapons.html#mallet">Mallet</a>'s ability lowers durability by 1,<br>and the weapon breaks once durability reaches 0.<br>When synthesizing weapons, the durability of the base weapon is unchanged.</p>
           <h4 id="bracelet_durability">Bracelet Durability</h4>
-          <p>Text</p>
+          <p>Bracelets can sometimes crack when you receive damage while they're equipped.<br>The purchasing and selling price of a cracked bracelet remains the same.</p>
+          <p>The chance for a bracelet to crack is ~3%, except for the Trapper Bracelet which has a ~10% chance.<br>Bracelets other than Trapper Bracelet also have a ~9% chance to crack from explosions.</p>
+          <p>Once a bracelet cracks, a durability value of 5~15 is set, and the bracelet shatters once it reaches 0.<br>Durability decreases by 1 when you're hit by an attack in the "Actions that can crack or shatter" list below.</p>
+          <p>So basically, cracks are based on luck, and can occur as early as the first hit after equipping a bracelet.<br>And a cracked bracelet will never immediately shatter, but will after a little while of receiving attacks.<br>Note that this applies to bracelets equipped by Asuka as well.</p>
           <dl>
-            <dt>Actions that both crack or shatter</dt>
+            <dt>Actions that can crack or shatter</dt>
             <dd></dd>
           </dl>
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Monster regular attacks.</li>
+            <li>Brutal hits from <a href="/shiren2/html/system/monsters.html#taurus_family">Taurus</a> monsters.</li>
+            <li>Ouch Statue's attacks.</li>
           </ul>
           <dl>
-            <dt>Actions that only crack</dt>
+            <dt>Actions that can crack</dt>
             <dd></dd>
           </dl>
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Body slams by <a href="/shiren2/html/system/monsters.html#stone_beast_family">Stone Beast</a> monsters (?)</li>
+            <li>Tripping (Trip Stone, <a href="/shiren2/html/system/monsters.html#armordillo_family">Armordillo</a> monsters, Balance Staff)</li>
+            <li>Explosions (Cannonballs, landmines, <a href="/shiren2/html/system/monsters.html#patient_bag">Patient Bag</a> explosions, Bomber and Explosion statues)</li>
+            <li>Log, Burr, Rockfall, and Rockslide traps.</li>
           </ul>
           <dl>
             <dt>Actions that never crack or shatter</dt>
             <dd></dd>
           </dl>
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Getting hit by arrows, stones, or other thrown items.</li>
+            <li>Special attacks or traps that don't deal damage. (ex: ones that inflict status conditions).</li>
+            <li>Getting sprayed by water from a <a href="/shiren2/html/system/monsters.html#shotfish_family">Shotfish</a> monster.</li>
+            <li>Fire or ice breath attacks.</li>
+            <li>Non-physical ranged attacks. (ex: staff magic).</li>
+            <li>Droplet Trap, Flood Trap</li>
           </ul>
-          <p>Text</p>
+          <p>So, there's no need to unequip bracelets when you're fighting Bow Boy or Boy Cart.<br>They also don't need to be unequipped when you're up against Archdragon or Porkton's special attacks.<br>And if your bracelets are already cracked, they don't need to be unequipped when fighting Cranky Tank.</p>
           <h3 id="fire_pillars">Fire Pillars</h3>
           <p>Text</p>
           <h3 id="ally_items_asuka_mamo">Ally Items (Asuka, Mamo)</h3>
