working on the gameplay basics page

--- a/html/system/gameplay-basics.html
+++ b/html/system/gameplay-basics.html
@@ -589,17 +589,19 @@
           <h3 id="fire_pillars">Fire Pillars</h3>
           <p>Text</p>
           <h3 id="ally_items_asuka_mamo">Ally Items (Asuka, Mamo)</h3>
-          <p>Text</p>
+          <p>Asuka's equipment and items stored inside Mamo's drawers generally carry forward between adventures.<br>They will both drop their items if they collapse inside a dungeon.<br>However, there are a few cases where Asuka and Mamo's items will vanish:</p>
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Selecting [Return to Napus Village] from the main menu.</li>
+            <li>Copying a journal. (Asuka and Mamo's items will vanish in the copy).</li>
+            <li>Certain in-game events.</li>
           </ul>
-          <p>Text</p>
+          <p>It's best to store important items in Napus Storage, rather than having Asuka or Mamo carry them.</p>
           <h2 id="status">Status</h2>
           <h3 id="level_growth">Level, Growth</h3>
           <h4 id="shiren_ally_level">Shiren, Ally Level</h4>
-          <p>Text</p>
+          <p>Shiren and his allies start at level 1, and will level up after gaining a certain amount of experience points.<br>They can reach a max level of 99, but their level resets each time they start a new adventure.<br>Some items and monsters have the ability to decrease level, and the minimum level is 1.<br>Leveling up increases max HP and <a href="/shiren2/html/system/gameplay-basics.html#base_attack">base attack</a>, and HP is restored equal to the amount of max HP you gained.<br>Allies will also gain an increase in <a href="/shiren2/html/system/gameplay-basics.html#defense">defense</a> when they level up.</p>
+          <p>Shiren and his allies gain experience points at the same rate.<br>However, some items that modify level have different effects between Shiren and ally characters.<br>For example, swinging a Happy Staff at Shiren provides 500 experience points,<br>and swinging it at an ally will simply level them up.</p>
+          <p>See the <a href="/shiren2/html/playing/exp-and-stats.html">Exp & Stats</a> page for details on level up stats and required amount of experience points.</p>
           <h4 id="enemy_monster_level">Enemy Monster Level</h4>
           <p>Text</p>
           <h4 id="ally_monster_growth">Ally Monster Growth</h4>
