working on the gameplay basics page

--- a/html/system/gameplay-basics.html
+++ b/html/system/gameplay-basics.html
@@ -603,19 +603,19 @@
           <p>Shiren and his allies gain experience points at the same rate.<br>However, some items that modify level have different effects between Shiren and ally characters.<br>For example, swinging a Happy Staff at Shiren provides 500 experience points,<br>and swinging it at an ally will simply level them up.</p>
           <p>See the <a href="/shiren2/html/playing/exp-and-stats.html">Exp & Stats</a> page for details on level up stats and required amount of experience points.</p>
           <h4 id="enemy_monster_level">Enemy Monster Level</h4>
-          <p>Text</p>
+          <p>Monsters level up and turn into a higher rank monster if they defeat other monsters or Shiren's allies.<br>Monsters can also level up from items such as Happy Staff, Happy Grass, Angel Seed.</p>
           <h4 id="ally_monster_growth">Ally Monster Growth</h4>
-          <p>Text</p>
+          <p>Ally monsters don't have experience points or level ups, but instead have what's called growth.<br>Growth occurs when an ally monster defeats an enemy monster, increasing both max HP and strength.<br>Every monster has a set growth limit, and the stat gains per growth differs between monsters.<br>Ally monsters will keep their growth between adventures, but growth will be halved if they are defeated.<br>(Growth is only halved for monsters registered to Monster Kingdom, since unregistered monsters are lost).</p>
           <h4 id="things_that_affect_level">Things that affect Level and Growth</h4>
           <dl>
             <dt>Items</dt>
-            <dd>Text</dd>
+            <dd>Happy Grass, Angel Seed, Twisty Grass, Unlucky Seed, Disaster Seed,<br>Spoiled Riceball, Happy Staff, Unlucky Staff, Happy Shield, Level Lock Bracelet.</dd>
             <dt>Monsters</dt>
-            <dd>Text</dd>
+            <dd>Twisty Hani, Gazelle Pope, Mr. Helico (Happy Grass).</dd>
             <dt>Other</dt>
-            <dd>Text</dd>
+            <dd>Synthesis seals (幸, 天, and 超), secret phrases (そあぞけ, パゾエバ).</dd>
           </dl>
-          <p>Text</p>
+          <p>　※ See the item, monster, and seal pages for details.</p>
           <h3 id="hp">HP</h3>
           <h4 id="shiren_ally_hp">Shiren, Ally HP</h4>
           <p>Text</p>
